--- a/index.html
+++ b/index.html
@@ -1,130 +1,113 @@
 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>PPA Participativo - Pelotas</title>
-  <link rel="stylesheet" href="style.css">
+  <title>PPA Pelotas 2026-2029</title>
+  <link rel="stylesheet" href="estilo.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f7fa;
+    }
+    header img {
+      width: 100%;
+      display: block;
+    }
+    .menu-lateral {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: #0043ce;
+      height: 100vh;
+      width: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 20px;
+    }
+    .menu-lateral button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      color: white;
+      margin: 15px 0;
+      cursor: pointer;
+    }
+    .conteudo {
+      margin-left: 70px;
+      padding: 20px;
+    }
+    .ods-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .ods-item {
+      background-color: #ffffff;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    .ods-item img {
+      width: 80px;
+      height: auto;
+    }
+    .ods-item span {
+      display: block;
+      margin-top: 10px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <h1>Plano Plurianual 2026-2029</h1>
-    <p>Pelotas/RS</p>
+    <img src="img/cabecalho.png" alt="Cabeçalho PPA Pelotas 2026-2029">
   </header>
 
-  <main>
-    <section>
-      <input type="text" id="busca" placeholder="Buscar eixo, objetivo ou programa..." />
-      <div id="estrutura"></div>
-    </section>
+  <nav class="menu-lateral">
+    <button onclick="carregar('index.html')" title="Início">🏠</button>
+    <button onclick="carregar('construcao.html')" title="Construção">📊</button>
+    <button onclick="carregar('contato.html')" title="Contato">📲</button>
+  </nav>
+
+  <main class="conteudo" id="conteudo-principal">
+    <h2>Objetivos de Desenvolvimento Sustentável</h2>
+    <div class="ods-grid">
+      <div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/1.png" alt="ODS 1"><span><strong>ODS 1</strong><br>Erradicar a pobreza</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/2.png" alt="ODS 2"><span><strong>ODS 2</strong><br>Fome zero e agricultura sustentável</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/3.png" alt="ODS 3"><span><strong>ODS 3</strong><br>Saúde e bem-estar</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/4.png" alt="ODS 4"><span><strong>ODS 4</strong><br>Educação de qualidade</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/5.png" alt="ODS 5"><span><strong>ODS 5</strong><br>Igualdade de gênero</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/6.png" alt="ODS 6"><span><strong>ODS 6</strong><br>Água potável e saneamento</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/7.png" alt="ODS 7"><span><strong>ODS 7</strong><br>Energia acessível e limpa</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/8.png" alt="ODS 8"><span><strong>ODS 8</strong><br>Trabalho decente e crescimento econômico</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/9.png" alt="ODS 9"><span><strong>ODS 9</strong><br>Indústria, inovação e infraestrutura</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/10.png" alt="ODS 10"><span><strong>ODS 10</strong><br>Redução das desigualdades</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/11.png" alt="ODS 11"><span><strong>ODS 11</strong><br>Cidades e comunidades sustentáveis</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/12.png" alt="ODS 12"><span><strong>ODS 12</strong><br>Consumo e produção responsáveis</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/13.png" alt="ODS 13"><span><strong>ODS 13</strong><br>Ação contra a mudança global do clima</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/14.png" alt="ODS 14"><span><strong>ODS 14</strong><br>Vida na água</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/15.png" alt="ODS 15"><span><strong>ODS 15</strong><br>Vida terrestre</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/16.png" alt="ODS 16"><span><strong>ODS 16</strong><br>Paz, justiça e instituições eficazes</span></div>
+<div class="ods-item"><img src="https://odsbrasil.gov.br/content/ods/17.png" alt="ODS 17"><span><strong>ODS 17</strong><br>Parcerias e meios de implementação</span></div>
+    </div>
   </main>
 
   <script>
-    const dados = [
-      {
-        "nome": "Democracia, Cidadania e Justiça Social",
-        "objetivos": [
-          {
-            "nome": "Ampliar e qualificar os espaços de participação e controle social.",
-            "programas": [
-              {
-                "nome": "Gestão Participativa",
-                "justificativa": "Ampliar canais de diálogo com a população.",
-                "objetivo": "Garantir instrumentos de participação efetiva.",
-                "ods": "16,17"
-              }
-            ]
-          },
-          {
-            "nome": "Promover políticas públicas que enfrentam desigualdades.",
-            "programas": [
-              {
-                "nome": "Pelotas das Mulheres",
-                "justificativa": "Reduzir desigualdades de gênero.",
-                "objetivo": "Desenvolver ações com foco em equidade.",
-                "ods": "5,10"
-              }
-            ]
-          }
-        ]
-      },
-      {
-        "nome": "Cidade Inclusiva e Acessível",
-        "objetivos": [
-          {
-            "nome": "Assegurar mobilidade e acessibilidade para todos.",
-            "programas": [
-              {
-                "nome": "Pelotas Acessível",
-                "justificativa": "Garantir acesso urbano igualitário.",
-                "objetivo": "Promover infraestrutura com acessibilidade.",
-                "ods": "10,11"
-              }
-            ]
-          }
-        ]
-      }
-    ];
-
-    document.addEventListener("DOMContentLoaded", () => {
-      const estruturaDiv = document.getElementById("estrutura");
-      const buscaInput = document.getElementById("busca");
-
-      renderEstrutura(dados);
-
-      buscaInput.addEventListener("input", () => {
-        const termo = buscaInput.value.toLowerCase();
-        const filtrado = dados.filter(eixo =>
-          eixo.nome.toLowerCase().includes(termo) ||
-          eixo.objetivos.some(obj =>
-            obj.nome.toLowerCase().includes(termo) ||
-            obj.programas.some(p =>
-              p.nome.toLowerCase().includes(termo)
-            )
-          )
-        );
-        renderEstrutura(filtrado);
-      });
-
-      function renderEstrutura(data) {
-        estruturaDiv.innerHTML = "";
-        data.forEach(eixo => {
-          const eixoDiv = document.createElement("div");
-          eixoDiv.className = "eixo";
-          eixoDiv.innerHTML = `<h2>${eixo.nome}</h2>`;
-
-          eixo.objetivos.forEach(obj => {
-            const objDiv = document.createElement("div");
-            objDiv.className = "objetivo";
-            objDiv.innerText = obj.nome;
-
-            obj.programas.forEach(p => {
-              const progDiv = document.createElement("div");
-              progDiv.className = "programa";
-              progDiv.innerHTML = `
-                <p><strong>Programa:</strong> ${p.nome}</p>
-                <p><strong>Justificativa:</strong> ${p.justificativa}</p>
-                <p><strong>Objetivo do Programa:</strong> ${p.objetivo}</p>
-                <div class="ods">${renderODS(p.ods)}</div>
-              `;
-              objDiv.appendChild(progDiv);
-            });
-
-            eixoDiv.appendChild(objDiv);
-          });
-
-          estruturaDiv.appendChild(eixoDiv);
+    function carregar(pagina) {
+      fetch(pagina)
+        .then(r => r.text())
+        .then(html => {
+          document.getElementById("conteudo-principal").innerHTML = html;
         });
-      }
-
-      function renderODS(odsStr) {
-        if (!odsStr) return "";
-        const ods = odsStr.split(",").map(n => n.trim());
-        return ods.map(n =>
-          `<img src="https://odsbrasil.gov.br/content/ods/${n}.png" title="ODS ${n}">`
-        ).join("");
-      }
-    });
+    }
   </script>
+
 </body>
 </html>
